# ffmpeg-web

./: Cargo.toml  README.md  build.rs  build.sh  flake.nix
js/: ffmpeg-bridge.js
src/: app.rs  ffmpeg.rs  ffmpeg_pre.js  ffmpeg_wrapper.c  lib.rs
src/components/: codec_selector.rs  file_input.rs  format_selector.rs  mod.rs  progress.rs  transcoder.rs
src/ffmpeg/: mod.rs  wasm_bridge.rs
static/: index.html
