[package]
name = "ffmpeg-transcoder"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = { version = "0.8", features = ["timers"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlAnchorElement",
  "Node",
  "Window",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Event",
  "File",
  "FileReader"
]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "s"
lto = true
